# platform-sdk

./: .gitmodules  CMakeLists.txt  Dockerfile.alpine  Dockerfile.rpi  Dockerfile.ubuntu  HowToCompile.md  LICENSE  README.md  airmapd.cmake  azure-pipelines.yaml  circle.yml  external.cmake  iOS.cmake  pack.cmake  prepare_toolchain.cmake
.circleci/: config.yml
Formula/: airmapd.rb
cmake/: FindGRPC.cmake
config/: CMakeLists.txt
config/aero/: CMakeLists.txt  config.json
debian/: airmapd-intel-aero.postinst  airmapd-intel-aero.service  airmapd.install  airmapd.service  control  copyright  rules
docker/: alpine  centos  extract_artifacts.sh  l4t  rpi  ubuntu
examples/monitor/: CMakeLists.txt  client.cpp
examples/qt/: CMakeLists.txt  client.cpp  client.h
include/airmap/: advisory.h  aircraft.h  aircrafts.h  airspace.h  airspaces.h  authenticator.h  client.h  context.h  credentials.h  date_time.h  do_not_copy_or_move.h  error.h  evaluation.h  flight.h  flight_plan.h  flight_plans.h  flights.h  geometry.h  logger.h  optional.h  outcome.h  pilot.h  pilots.h  rule.h  ruleset.h  rulesets.h  status.h  telemetry.h  timestamp.h  token.h  traffic.h  version.h  visibility.h
include/airmap/monitor/: client.h
include/airmap/qt/: client.h  logger.h  types.h
interfaces/: CMakeLists.txt
src/airmap/: CMakeLists.txt  airspace.cpp  client.cpp  codec.h  context.cpp  credentials.cpp  date_time.cpp  error.cpp  evaluation.cpp  geometry.cpp  jsend.h  logger.cpp  paths.cpp  paths.h  pilots.cpp  rule.cpp  ruleset.cpp  status.cpp  telemetry.cpp  token.cpp  traffic.cpp
src/airmap/boost/: context.cpp  context.h
src/airmap/cpp/: CMakeLists.txt
src/airmap/grpc/: init.cpp  init.h  method_invocation.cpp  method_invocation.h
src/airmap/mavlink/: channel.cpp  channel.h  global_position_int.cpp  global_position_int.h  heartbeat.cpp  heartbeat.h  state.h  (+9 more)
test/: CMakeLists.txt  airspace_test.cpp  cli_test.cpp  client_test.cpp  credentials_test.cpp  daemon_test.cpp  datetime_test.cpp  error_test.cpp  geometry_test.cpp  helper.h  issue_38_test.cpp  platform_test.cpp  rest_test.cpp  telemetry_test.cpp  token_test.cpp
test/acceptance/: laanc.sh
test/mock/: client.h
tools/alpine/: build-docker-image.sh  cleanup.dev.sh  setup.dev.sh
tools/centos/: build-docker-image.sh  install.sh  setup.dev.sh
tools/l4t/: build-docker-image.sh
tools/osx/: setup.sh
tools/rpi/: cleanup.dev.sh  setup.dev.sh
tools/ubuntu/: build-docker-image.sh  build-package.sh  cleanup.dev.sh  setup.dev.sh  test-packaging.sh
(+278 files in other folders)
